--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:#95a5a6 ;
+  background-color:#bdc3c7;
 }
 
 code {
